# polyhedral-gravity-model

./: .clang-format  .gitignore  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  pytest.ini  setup.py  version.cmake
.github/workflows/: build-and-test.yml  ctest.yml  docs.yml  draft-pdf.yml  wheels.yml
cmake/: FindSphinx.cmake  clang_format.cmake  cmake_format.cmake  git.cmake  gtest.cmake  pybind11.cmake  spdlog.cmake  tbb.cmake  tetgen.cmake  thrust.cmake  version.cmake  xsimd.cmake  yaml.cmake
docs/: CMakeLists.txt  Doxyfile.in  build.rst  conf.py  index.rst  quick_start_cpp.rst  quick_start_python.rst  rational.rst  requirements.txt  supported_input.rst
docs/api/: calculation.rst  input.rst  model.rst  output.rst  python.rst  util.rst
docs/background/: approach.rst  evaluable_vs_evaluate.rst  mesh_integrity.rst  rational.rst
docs/quickstart/: build.rst  examples_cpp.rst  examples_python.rst  installation.rst  overview.rst  quick_start_cpp.rst  quick_start_python.rst  quickstart_overview.rst  supported_input.rst
example-config/: example_cube.yaml  example_eros.yaml  example_tsoulis.yaml  example_tsoulis2.yaml
example-config/data/: Eros.face  cube.node  cube_origin.node  tsoulis.face  tsoulis.node  tsoulis.ply  tsoulis.stl
notebooks/: polyhedral-gravity-torch-benchmark.ipynb  polyhedral-gravity-torch.ipynb
paper/: paper.bib  paper.md
python-binding/: CMakeLists.txt  python-interface.cpp
python/polyhedral_gravity/: __init__.py  torch.py
script/: Kleopatra.ipynb  analytical_cube_gravity.py  cube_plots.py  environment.yml  environment_arm.yml  eros_plots.py  generate_analytical_cube_solution.py  measure_runtime.py  mesh_plotting.py  mesh_utility.py  polyhedral-gravity.ipynb  time.py  torus_plots.py
script/.ipynb_checkpoints/: polyhedral-gravity-checkpoint.ipynb
script/mesh/: Eros.pk  torus.pk  torus_lp.pk
src/: CMakeLists.txt  main.cpp
src/polyhedralGravity/: CMakeLists.txt  Info.h.in  Version.h
src/polyhedralGravity/calculation/: GravityEvaluable.cpp  GravityEvaluable.h  GravityModel.cpp  GravityModel.h  GravityModelDetail.h  MeshChecking.cpp  MeshChecking.h  PolyhedronTransform.h  SanityCheck.cpp  SanityCheck.h
src/polyhedralGravity/input/: ConfigSource.h  DataSource.h  MeshReader.cpp  MeshReader.h  TetgenAdapter.cpp  TetgenAdapter.h  YAMLConfigReader.cpp  YAMLConfigReader.h
src/polyhedralGravity/model/: Definitions.h  GravityEvaluable.cpp  GravityEvaluable.h  GravityModel.cpp  GravityModel.h  GravityModelData.h  GravityModelDetail.cpp  GravityModelDetail.h  MeshChecking.cpp  MeshChecking.h  Polyhedron.cpp  Polyhedron.h  PolyhedronDefinitions.cpp  PolyhedronDefinitions.h
src/polyhedralGravity/output/: CSVWriter.cpp  CSVWriter.h  Logging.cpp  Logging.h
src/polyhedralGravity/util/: UtilityConstants.h  UtilityContainer.h  UtilityFloatArithmetic.cpp  UtilityFloatArithmetic.h  UtilityString.h  UtilityThrust.h
src/polyhedralGravityPython/: CMakeLists.txt  PolyhedralGravityPython.cpp  python-interface.cpp
test/: CMakeLists.txt
test/calculation/: GravityModelBigTest.cpp  GravityModelCubeTest.cpp  GravityModelTest.cpp  GravityModelVectorUtility.cpp  GravityModelVectorUtility.h  MeshCheckingTest.cpp  SanityCheckTest.cpp
test/input/: MeshReaderTest.cpp  TetgenAdapterTest.cpp
test/model/: GoogleTestMatcher.h  GravityModelBigTest.cpp  GravityModelCubeTest.cpp  GravityModelTest.cpp  GravityModelVectorUtility.cpp  GravityModelVectorUtility.h  MeshCheckingTest.cpp  PolyhedronBigTest.cpp  PolyhedronMetricTest.cpp  PolyhedronTest.cpp
test/python/: test_gravity_model.py  test_gravity_model_torch.py  test_polyhedral_gravity.py  test_polyhedron.py
test/resources/: GravityModelBigTest.node  GravityModelBigTestExpectedAlphaSingularities.txt  GravityModelBigTestExpectedBetaSingularities.txt  GravityModelBigTestExpectedGij.txt  GravityModelBigTestExpectedHessianPlanes.txt  GravityModelBigTestExpectedOrthogonalPlaneProjectionPoints.txt  GravityModelBigTestExpectedOrthogonalSegmentProjectionPoints.txt  GravityModelBigTestExpectedPlaneDistances.txt  GravityModelBigTestExpectedPlaneOrientation.txt  GravityModelBigTestExpectedPlaneUnitNormals.txt  GravityModelBigTestExpectedSegmentDistances.txt  GravityModelBigTestExpectedSegmentOrientation.txt  GravityModelBigTestExpectedSegmentUnitNormals.txt  GravityModelBigTestExpectedTranscendentalExpressions.txt  MeshReaderTestReadSimple.mesh  TetgenAdapterTestReadSimple.face  TetgenAdapterTestReadSimple.off  analytic_cube_solution.txt  analytic_cube_solution_density1.txt  analytic_cube_solution_density42.txt  cube.face  mod.py
test/util/: UtilityContainerTest.cpp  UtilityFloatArithmeticTest.cpp
